<resources>
    <string name="app_name">LangApp</string>
    <string name="form_incomplete">Please fill all required fields</string>
    <string name="import_">Import</string>
    <string name="deck_name">Deck name</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="wrong">Wrong</string>
    <string name="right">Right</string>
    <string name="easy">Easy</string>
    <string name="edit">Edit</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="learn">Learn</string>
    <string name="add_deck">Add deck</string>
    <string name="edit_deck">Edit deck</string>
    <string name="cards_left">Cards left:</string>
    <string name="cancel">Cancel</string>
    <string name="delete_deck">Delete deck?</string>
    <string name="are_you_sure">Are you sure you want to delete %1$s?</string>
    <string name="card_deleted">Card has been deleted</string>
    <string name="undo">Undo</string>
    <string name="this_deck_is_empty">This deck is empty</string>
    <string name="no_file_selected">No file selected</string>
    <string name="choose_file">Choose file</string>
    <string name="cards_separator">Cards separator</string>
    <string name="choose_separator">Choose separator</string>
    <string name="new_line">New line</string>
    <string name="separator_character">separator character:</string>
    <string name="time_label">Time spent learning:</string>
    <string name="first_term_is">First term is</string>
    <string name="terms_separator">Terms separator</string>
    <string name="example">Example:</string>
    <string name="ok">OK</string>
    <string name="char_field_is_empty">Char field is empty</string>
    <string name="import_into">Import into</string>
    <string name="choose_deck">Choose deck</string>
    <string name="create_new_deck">Create a new deck</string>
    <string name="no_file">Please choose a file</string>
    <string name="bad_file">Please select a different file. Supported file types: TXT</string>
    <string name="no_deck">Please select a deck</string>
    <string name="listen">Listen</string>
    <string name="front_language_optional">Front language (Optional)</string>
    <string name="back_language_optional">Back language (Optional)</string>
    <string name="choose_language">Choose language</string>
    <string name="clear">Clear</string>
    <string name="edit_card">Edit card</string>
    <string name="statistics">Statistics</string>
    <string name="home">Home</string>
    <string name="times_reviewed">Times reviewed:</string>
    <string name="ease_score">Ease score:</string>
    <string name="well_done">Well done!</string>
    <string name="review_stats">Reviewed cards: %1$d \nTime: %2$s</string>
    <string name="settings">Settings</string>
</resources>