<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ks.langapp.ui.flashcard.FlashcardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_medium"
        tools:context=".ui.flashcard.FlashcardFragment">

        <TextView
            android:id="@+id/cards_left_label"
            android:text="@string/cards_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/cards_left"
            android:layout_width="wrap_content"
            android:text="@{String.valueOf(viewModel.cards.size() - viewModel.cardsReviewed)}"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/cards_left_label"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:text="/"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/cards_left"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/all_cards"
            android:layout_width="wrap_content"
            android:text="@{String.valueOf(viewModel.cards.size())}"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/separator"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/times_reviewed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times_reviewed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cards_left_label"/>

        <TextView
            android:id="@+id/times_reviewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(viewModel.currentStats.timesReviewed)}"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/times_reviewed_label"
            app:layout_constraintTop_toBottomOf="@id/cards_left_label"/>

        <TextView
            android:id="@+id/ease_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ease_score"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/times_reviewed"
            app:layout_constraintTop_toBottomOf="@id/cards_left_label"/>

        <TextView
            android:id="@+id/ease_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(viewModel.currentStats.easeScore)}"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/ease_score_label"
            app:layout_constraintTop_toBottomOf="@id/cards_left_label"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/flashcard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:layout_marginVertical="@dimen/margin_medium"
            android:onClick="@{() -> viewModel.onCardClicked()}"
            app:layout_constraintBottom_toTopOf="@id/button_wrong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/times_reviewed_label">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">

                <ImageButton
                    android:id="@+id/settings_button"
                    android:src="@drawable/icon_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/edit" />

                <ImageButton
                    android:id="@+id/edit_button"
                    android:src="@drawable/icon_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@android:color/transparent"
                    app:layout_constraintStart_toEndOf="@id/settings_button"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/edit" />

                <TextView
                    android:id="@+id/front_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.currentCard.front}"
                    app:layout_constraintBottom_toTopOf="@id/back_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/back_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.currentCard.back}"
                    android:visibility="@{viewModel.backVisibility}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/front_text" />

                <ImageButton
                    android:padding="5dp"
                    android:src="@drawable/icon_listen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onListenClick()}"
                    android:visibility="@{viewModel.backVisibility}"
                    android:layout_marginBottom="10dp"
                    style="?attr/materialButtonOutlinedStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/listen" />




            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_wrong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onWrongClick()}"
            android:text="@string/wrong"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onRightClick()}"
            android:text="@string/right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_easy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_wrong" />

        <Button
            android:id="@+id/button_easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onEasyClick()}"
            android:text="@string/easy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_right" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>